<resources>
    <string name="app_name">App_Empresas</string>
    <string name="errorConection">Falha na conexão</string>
    <string name="welcome_text">BEM-VINDO AO EMPRESAS</string>
    <string name="loren_text">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="email_field">Email</string>
    <string name="password_text">Senha</string>
    <string name="sigin_button">Entrar</string>
    <string name="loren_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="infoSearch">Clique na busca para iniciar.</string>
    <string name="todo">TODO</string>
    <string name="enterprise_name">Nome da Empresa</string>
    <string name="enterprise_type">Tipo da Empresa</string>
    <string name="enterprise_country">País da empresa</string>
</resources>
