<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">


        <ImageView
            android:id="@+id/logo_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="59dp"
            android:layout_marginStart="59dp"
            android:layout_marginTop="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_home" />

        <TextView
            android:id="@+id/welcomeId"
            android:layout_width="148dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textColor="#383743"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_id" />

        <TextView
            android:id="@+id/texto_rand_id"
            android:layout_width="255dp"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="2.3sp"
            android:text="@string/loren_text"
            android:textColor="#383743"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeId" />

        <EditText
            android:id="@+id/emailEditTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_rand_id" />

        <EditText
            android:id="@+id/passwordEditTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_cadeado"
            android:drawableStart="@drawable/ic_cadeado"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextId" />

        <Button
            android:id="@+id/siginButtonId"
            android:layout_width="186dp"
            android:layout_height="30dp"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="24dp"
            android:background="@color/greeny_blue"
            android:text="@string/sigin_button"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
